# Nodrift

./: .gitignore  LICENSE  README.md  pyproject.toml
nodrift/: __init__.py  cli.py  embedder.py  parser.py  reporter.py  scorer.py
tests/: test_embedder.py  test_parser.py  test_scorer.py
tests/fixtures/: sectioned.txt  simple.txt  with_preamble.txt
tests/sample/: v1.txt  v2.txt  v3.txt  v4.txt
