[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodrift"
version = "0.1.0"
description = "Semantic versioning for LLM prompts. Detect behavioral drift before it reaches production."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["llm", "prompts", "semantic", "diff", "drift"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
nodrift = "nodrift.cli:app"

[project.urls]
Homepage = "https://github.com/Feareis/nodrift"
Repository = "https://github.com/Feareis/nodrift"
Issues = "https://github.com/Feareis/nodrift/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=nodrift --cov-report=term-missing"
